   o #324272 by neochief: hook_pre_render never called.
   o #324058: Broken queries created by string values in multiple fields.
   o #324726: "tag" fields should be autocomplete in View edit.
   o #324058 by yched: Make aliases safer for many to one tables.
   o #325765: Prevent key merge errors on query::add_where and query::add_having.
   o #324378: Minor usability improvements to the list page.
   o #326934: Need another check to make sure already added aliases do not get blown away.
   o #324513: If a relationship table was added more than 1 hop away from the base, SQL errors resulted.
   o #326129 by mindgame: Not between operator did not function.
   o #326198: != mistakenly typod as = (display only)
   o #326379: Provide a default title for the archive view.
   o #327151: Add filter for node_counter.timestamp.
   o #327113: Clean up error text when display will not validate.
   o #307287: (Panels related) view::preview() would override previously set arguments if no arguments were sent.
   o #321589: Comment template preprocessor misnamed so it would not fire.
   o #329746: Comment rendering in the node row style was not working.
   o #321109: view::destroy() needs to unset current_display or future init_displays won't work.
   o #325115: If the block description is not set, show the display title as well as the view name in block administration.
   o #327604 by henrrrik: should use multibyte string functions.
   o #328933 by cmyers: views_handler_filter_date fails to use exposed operator.
   o #332568 by Moonshine: Correct views performance timers.
   o #332679 by yched: render_link() does not check for empty data.
   o #333593: Incorrect reference to non-existent views_handler_join in help/api-tables.html.

 Other changes:
   o Reorganize the analysis code into analyze.inc to make it easier for
     people to find the code and use it externally.
   o #298884 (by neclimdul): Requested missing filter to filter for whether a user has a picture or not.