@@ -1,5 +1,5 @@
-<!-- $Id: argument.html,v 1.6 2008-10-14 17:06:02 merlinofchaos Exp $ -->
-Arguments are input. While they often come from the URL, <strong>they don't always</strong> so please don't be shocked when they don't. Each display type may have its own source for arguments. Block displays have no source of arguments at all; they cannot pull arguments from the URL, and often require use of the PHP code default in order to get arguments. The argument default plugins can be used to get arguments into a block view. See "Provide default", below.
+<!-- $Id: argument.html,v 1.7 2008-11-20 00:10:13 merlinofchaos Exp $ -->
+Arguments are input. While they often come from the URL, <strong>they don't always</strong> so please don't be shocked when they don't. Each display type may have its own source for arguments. Block displays have no source of arguments at all; they cannot pull arguments from the URL, and often require use of the default argument PHP code in order to get arguments. The argument default plugins can be used to get arguments into a block view. See "Provide default", below.
 
 In general, arguments are used to filter the view, and in that sense they have a very close relationship to filters, but that isn't necessarily true for every argument. Arguments can be used for any purpose, really; the extent of what the argument does is up to the developer of the argument, but the arguments that come with Views are almost entirely filters.
 
@@ -46,6 +46,8 @@ If a view provides a menu option, such as a tab, if the argument does not valida
 
 This sytem can have other validators plugged in; by default, Views provides:
 <dl>
+<dt>Basic validation</dt>
+<dd>Ensures that the argument is present. A PHP NULL value (from eg. PHP default argument code) will invalidate.</dd>
 <dt>Node</dt>
 <dd>Ensure that the argument is a valid Node ID. You may select which types of node the validator will accept.</dd>
 <dt>Taxonomy term</dt>
